app/javascript/styles/components.scss
@import 'variables';

.app-body {
  -webkit-overflow-scrolling: touch;
  -ms-overflow-style: -ms-autohiding-scrollbar;
}

.button {
  background-color: darken($ui-highlight-color, 3%);
  border: 10px none;
  border-radius: 4px;
  box-sizing: border-box;
  color: $primary-text-color;
  cursor: pointer;
  display: inline-block;
  font-family: inherit;
  font-size: 14px;
  font-weight: 500;
  height: 36px;
  letter-spacing: 0;
  line-height: 36px;
  overflow: hidden;
  padding: 0 16px;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  text-decoration: none;
  text-overflow: ellipsis;
  transition: all 100ms ease-in;
  white-space: nowrap;
  width: auto;

  &:active,
  &:focus,
  &:hover {
    background-color: lighten($ui-highlight-color, 7%);
    transition: all 200ms ease-out;
  }

  &:disabled {
    background-color: $ui-primary-color;
    cursor: default;
  }

  &.button-alternative {
    font-size: 16px;
    line-height: 36px;
    height: auto;
    color: $ui-base-color;
    background: $ui-primary-color;
    text-transform: none;
    padding: 4px 16px;

    &:active,
    &:focus,
    &:hover {
      background-color: lighten($ui-primary-color, 4%);
    }
  }

  &.button-secondary {
    font-size: 16px;
    line-height: 36px;
    height: auto;
    color: $ui-primary-color;
    text-transform: none;
    background: transparent;
    padding: 3px 15px;
    border: 1px solid $ui-primary-color;

    &:active,
    &:focus,
    &:hover {
      border-color: lighten($ui-primary-color, 4%);
      color: lighten($ui-primary-color, 4%);
    }
  }

  &.button--block {
    display: block;
    width: 100%;
  }
}

.column__wrapper {
  display: flex;
  flex: 1 1 auto;
  position: relative;
}

.column-icon {
  background: lighten($ui-base-color, 4%);
  color: $ui-primary-color;
  cursor: pointer;
  font-size: 16px;
  padding: 15px;
  position: absolute;
  right: 0;
  top: -48px;
  z-index: 3;

  &:hover {
    color: lighten($ui-primary-color, 7%);
  }
}

.icon-button {
  display: inline-block;
  padding: 0;
  color: $ui-base-lighter-color;
  border: none;
  background: transparent;
  cursor: pointer;
  transition: color 100ms ease-in;

  &:hover,
  &:active,
  &:focus {
    color: lighten($ui-base-color, 33%);
    transition: color 200ms ease-out;
  }

  &.disabled {
    color: lighten($ui-base-color, 13%);
    cursor: default;
  }

  &.active {
    color: $ui-highlight-color;
  }

  &::-moz-focus-inner {
    border: 0;
  }

  &::-moz-focus-inner,
  &:focus,
  &:active {
    outline: 0 !important;
  }

  &.inverted {
    color: lighten($ui-base-color, 33%);

    &:hover,
    &:active,
    &:focus {
      color: $ui-base-lighter-color;
    }

    &.active {
      color: $ui-highlight-color;
    }

    &.disabled {
      color: $ui-primary-color;
    }
  }

  &.overlayed {
    box-sizing: content-box;
    background: rgba($base-overlay-background, 0.6);
    color: rgba($primary-text-color, 0.7);
    border-radius: 4px;
    padding: 2px;

    &:hover {
      background: rgba($base-overlay-background, 0.9);
    }
  }
}

.text-icon-button {
  color: lighten($ui-base-color, 33%);
  border: none;
  background: transparent;
  cursor: pointer;
  font-weight: 600;
  font-size: 11px;
  padding: 0 3px;
  line-height: 27px;
  outline: 0;
  transition: color 100ms ease-in;

  &:hover,
  &:active,
  &:focus {
    color: $ui-base-lighter-color;
    transition: color 200ms ease-out;
  }

  &.disabled {
    color: lighten($ui-base-color, 13%);
    cursor: default;
  }

  &.active {
    color: $ui-highlight-color;
  }

  &::-moz-focus-inner {
    border: 0;
  }

  &::-moz-focus-inner,
  &:focus,
  &:active {
    outline: 0 !important;
  }
}

.dropdown--active .icon-button {
  color: $ui-highlight-color;
}

.dropdown--active::after {
  content: "";
  display: block;
  position: absolute;
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 0 4.5px 7.8px;
  border-color: transparent transparent $ui-secondary-color;
  bottom: 8px;
  right: 104px;
}

.invisible {
  font-size: 0;
  line-height: 0;
  display: inline-block;
  width: 0;
}

.ellipsis {
  &::after {
    content: "…";
  }
}

.lightbox .icon-button {
  color: $ui-base-color;
}

.compose-form {
  padding: 10px;
}

.compose-form__warning {
  color: darken($ui-secondary-color, 65%);
  margin-bottom: 15px;
  background: $ui-primary-color;
  box-shadow: 0 2px 6px rgba($base-shadow-color, 0.3);
  padding: 8px 10px;
  border-radius: 4px;
  font-size: 13px;
  font-weight: 400;

  strong {
    color: darken($ui-secondary-color, 65%);
    font-weight: 500;
  }

  a {
    color: darken($ui-primary-color, 33%);
    font-weight: 500;
    text-decoration: underline;

    &:hover,
    &:active,
    &:focus {
      text-decoration: none;
    }
  }
}

.compose-form__modifiers {
  color: $ui-base-color;
  font-family: inherit;
  font-size: 14px;
  background: $simple-background-color;
  border-radius: 0 0 4px;
}

.compose-form__buttons-wrapper {
  display: flex;
  justify-content: space-between;
}

.compose-form__buttons {
  padding: 10px;
  background: darken($simple-background-color, 8%);
  box-shadow: inset 0 5px 5px rgba($base-shadow-color, 0.05);
  border-radius: 0 0 4px 4px;
  display: flex;

  .icon-button {
    box-sizing: content-box;
    padding: 0 3px;
  }
}

.compose-form__upload-button-icon {
  line-height: 27px;
}

.compose-form__sensitive-button {
  display: none;

  &.compose-form__sensitive-button--visible {
    display: block;
  }

  .compose-form__sensitive-button__icon {
    line-height: 27px;
  }
}

.compose-form__upload-wrapper {
  overflow: hidden;
}

.compose-form__uploads-wrapper {
  display: flex;
  padding: 5px;
}

.compose-form__upload {
  flex: 1 1 0;
  margin: 5px;
}

.compose-form__upload-thumbnail {
  border-radius: 4px;
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  height: 100px;
  width: 100%;
}
/* ... */

